Gazillion of fixes.

--- a/templates/drupal.conf.j2
+++ b/templates/drupal.conf.j2
@@ -1,5 +1,6 @@
 server {
   server_name _;
+  listen {{ drupal_http_port }};
   root /var/web{{ drupal_docroot }}/;
   error_log /var/log/nginx/container.log;
 
